Вёрстка компонента ProfileBlock

--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="module" src="./src/index.ts"></script>
-    <link rel="stylesheet" href="./src/pages/Registration/registration.pcss">
-    <link rel="stylesheet" href="./src/pages/Authorization/authorization.pcss">
-    <link rel="stylesheet" href="./src/pages/UserSettings/user_settings.pcss">
-    <link rel="stylesheet" href="./src/components/Button/button.pcss">
-    <link rel="stylesheet" href="./src/components/Input/input.pcss">
-    <link rel="stylesheet" href="./src/components/Navigation/navigation.pcss">
+    <script type="module" src="src/index.ts"></script>
+    <link rel="stylesheet" href="src/pages/Registration/registration.pcss">
+    <link rel="stylesheet" href="src/pages/Authorization/authorization.pcss">
+    <link rel="stylesheet" href="src/pages/UserChangePassword/user_change_password.pcss">
+    <link rel="stylesheet" href="src/components/Button/button.pcss">
+    <link rel="stylesheet" href="src/components/Input/input.pcss">
+    <link rel="stylesheet" href="src/components/Navigation/navigation.pcss">
+    <link rel="stylesheet" href="src/components/Avatar/avatar.pcss">
+    <link rel="stylesheet" href="src/components/ProfileInfoBlock/profileInfoBlock.pcss">
+    <link rel="stylesheet" href="src/components/Label/label.pcss">
+    <link rel="stylesheet" href="src/pages/UserSettings/user_settings.pcss">
+
 </head>
 <body>
   <div id="app"></div>
