--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <link rel="stylesheet" href="src/components/ProfileInfoBlock/profileInfoBlock.pcss">
     <link rel="stylesheet" href="src/components/Label/label.pcss">
     <link rel="stylesheet" href="src/pages/UserSettings/user_settings.pcss">
-
+    <link rel="stylesheet" href="src/pages/Chat/chat.pcss">
+    <link rel="stylesheet" href="src/components/ChatMessageItem/chatMessageItem.pcss">
+    <link rel="stylesheet" href="src/components/ContextMenu/contextMenu.pcss">
+    <link rel="stylesheet" href="src/components/Message/message.pcss">
+    
 </head>
 <body>
   <div id="app"></div>
