--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <link rel="stylesheet" href="src/pages/Chat/chat.pcss">
     <link rel="stylesheet" href="src/components/Button/button.pcss">
     <link rel="stylesheet" href="src/components/Input/input.pcss">
-    <link rel="stylesheet" href="src/components/Navigation/navigation.pcss">
     <link rel="stylesheet" href="src/components/Avatar/avatar.pcss">
-    <link rel="stylesheet" href="src/components/ProfileInfoBlock/profileInfoBlock.pcss">
-    <link rel="stylesheet" href="src/components/ChatMessageItem/chatMessageItem.pcss">
-    <link rel="stylesheet" href="src/components/ContextMenu/contextMenu.pcss">
-    <link rel="stylesheet" href="src/components/Message/message.pcss">
+    <link rel="stylesheet" href="src/components/ValidationError/validation_error.pcss">
+    <link rel="stylesheet" href="src/blocks/Message/message.pcss">
+    <link rel="stylesheet" href="src/blocks/Navigation/navigation.pcss">
+    <link rel="stylesheet" href="src/blocks/Field/field.pcss">
+    <link rel="stylesheet" href="src/blocks/ProfileInfoBlock/profileInfoBlock.pcss">
+    <link rel="stylesheet" href="src/blocks/ChatMessageItem/chatMessageItem.pcss">
+    <link rel="stylesheet" href="src/blocks/ContextMenu/contextMenu.pcss">
     
+
 </head>
 <body>
   <div id="app"></div>
