--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="src/blocks/ChatMessageItem/chatMessageItem.pcss">
     <link rel="stylesheet" href="src/blocks/ContextMenu/contextMenu.pcss">
     <link rel="stylesheet" href="src/pages/ErrorPage/error_page.pcss">
+    <link rel="stylesheet" href="src/components/Dialog/dialog.pcss">
     
 
 </head>
