--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     <link rel="stylesheet" href="src/blocks/Message/message.pcss">
     <link rel="stylesheet" href="src/blocks/Navigation/navigation.pcss">
     <link rel="stylesheet" href="src/blocks/ProfileInfoBlock/profileInfoBlock.pcss">
-    <link rel="stylesheet" href="src/blocks/Chat/chat.pcss">
+    <link rel="stylesheet" href="src/blocks/ChatItem/chatItem.pcss">
     <link rel="stylesheet" href="src/blocks/ContextMenu/contextMenu.pcss">
     <link rel="stylesheet" href="src/pages/ErrorPage/error_page.pcss">
     <link rel="stylesheet" href="src/components/Popup/popup.pcss">
     <link rel="stylesheet" href="src/components/ChatSettingsPopup/chatsettingspopup.pcss">
     <link rel="stylesheet" href="src/components/AddChatPopup/addChatPopup.pcss">
+    <link rel="stylesheet" href="src/components/DeleteChatConfirmPopup/deleteChatConfirmPopup.pcss">
+    <link rel="stylesheet" href="src/components/AddUserPopup/addUserPopup.pcss">
     <link rel="stylesheet" href="src/components/Link/link.pcss">
     <link rel="stylesheet" href="src/blocks/ChatsList/chatsList.pcss">
+    <link rel="stylesheet" href="src/components/Messenger/messenger.pcss">
+
 
 
     
