Попап добавления пользователя к чату

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="src/components/Link/link.pcss">
     <link rel="stylesheet" href="src/blocks/ChatsList/chatsList.pcss">
     <link rel="stylesheet" href="src/components/Messenger/messenger.pcss">
+    <link rel="stylesheet" href="src/components/UsersList/usersList.pcss">
+    <link rel="stylesheet" href="src/blocks/UserItem/userItem.pcss">
 
 
 
