Удаление пользователя из чата

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="src/components/Messenger/messenger.pcss">
     <link rel="stylesheet" href="src/components/UsersList/usersList.pcss">
     <link rel="stylesheet" href="src/blocks/UserItem/userItem.pcss">
+    <link rel="stylesheet" href="src/components/DeleteUserPopup/deleteUserPopup.pcss">
 
 
 
