--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="src/components/UsersList/usersList.pcss">
     <link rel="stylesheet" href="src/blocks/UserItem/userItem.pcss">
     <link rel="stylesheet" href="src/components/DeleteUserPopup/deleteUserPopup.pcss">
+    <link rel="stylesheet" href="src/blocks/Field/field.pcss">
 
 
 
